--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">DevSecOpsDemoApp</string>
+
+    <!-- Added for activity_main.xml -->
+    <string name="click_me">Click Me Now</string>
 </resources>
